// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Total component should render Summary Total component in balanced state 1`] = `
<div>
  <div
    class="border border-slate-400 rounded px-2 pt-6 pb-4 h-fit space-y-2"
  >
    <h6
      class="text-gray-800 font-bold text-xl pl-2 pb-2"
    >
      Summary total
    </h6>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 bg-gray-100"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Income
      </p>
      <span
        class="justify-self-end"
      >
        £4,000
      </span>
    </div>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 bg-gray-100"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Spending
      </p>
      <span
        class="justify-self-end"
      >
        £3,000
      </span>
    </div>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 text-white bg-gray-650"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Balance
      </p>
      <span
        class="justify-self-end"
      >
        £1,000
      </span>
    </div>
  </div>
</div>
`;

exports[`Summary Total component should render Summary Total component in negative state 1`] = `
<div>
  <div
    class="border border-slate-400 rounded px-2 pt-6 pb-4 h-fit space-y-2"
  >
    <h6
      class="text-gray-800 font-bold text-xl pl-2 pb-2"
    >
      Summary total
    </h6>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 bg-gray-100"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Income
      </p>
      <span
        class="justify-self-end"
      >
        £4,000
      </span>
    </div>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 bg-gray-100"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Spending
      </p>
      <span
        class="justify-self-end"
      >
        £3,000
      </span>
    </div>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 text-white bg-red-700"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Balance
      </p>
      <span
        class="justify-self-end"
      >
        £1,000
      </span>
    </div>
  </div>
</div>
`;

exports[`Summary Total component should render Summary Total component in positive state 1`] = `
<div>
  <div
    class="border border-slate-400 rounded px-2 pt-6 pb-4 h-fit space-y-2"
  >
    <h6
      class="text-gray-800 font-bold text-xl pl-2 pb-2"
    >
      Summary total
    </h6>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 bg-gray-100"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Income
      </p>
      <span
        class="justify-self-end"
      >
        £4,000
      </span>
    </div>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 bg-gray-100"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Spending
      </p>
      <span
        class="justify-self-end"
      >
        £3,000
      </span>
    </div>
    <div
      class="py-[22px] pl-4 pr-6 rounded text-lg grid grid-cols-3 text-white bg-green-700"
    >
      <p
        class="col-span-2 m-0"
        data-testid="paragraph"
      >
        Balance
      </p>
      <span
        class="justify-self-end"
      >
        £1,000
      </span>
    </div>
  </div>
</div>
`;
